[package]
name = "cargo-executable-payload"
version = "0.1.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand for creating standalone source files with base64-encoded payload."
repository = "https://github.com/qryxip/cargo-executable-payload"
keywords = ["competitive"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
anyhow = "1.0.42"
atty = "0.2.14"
base64 = "0.13.0"
camino = "1.0.5"
cargo_metadata = "0.14.0"
duct = "0.13.5"
itertools = "0.10.1"
shell-escape = "0.1.5"
structopt = "0.3.22"
tempfile = "3.2.0"
termcolor = "1.1.2"
which = "4.2.2"
